fixed alignment of autocomplete container

--- a/src/app/components/search-input/search-input.style.scss
+++ b/src/app/components/search-input/search-input.style.scss
@@ -6,7 +6,6 @@
   .autocomplete-container {
     display: none;
     position: absolute;
-    top: 44px;
     width: 100%;
 
     @media screen and (min-width: $small-screen) {
